# ot_app_stm

./: .extSettings  .gitignore  .gitmodules  README.md  Thread_Coap_Generic_FreeRTOS.ioc
Core/Inc/: FreeRTOSConfig.h
Core/Src/: app_entry.c  main.c
Drivers/BSP/STM32WBAxx_Nucleo/: STM32WBAxx_Nucleo_BSP_User_Manual.chm
Middlewares/ST/STM32_WPAN/thread/openthread/platform/: flash.c  flash.h
Middlewares/ST/STM32_WPAN/thread/openthread/stack/src/core/config/: misc.h
Projects/Common/WPAN/Interfaces/: hw_rng.c  hw_rng.h
STM32CubeIDE/: .cproject  .project  STM32WBA65RIVX_FLASH.ld  Thread_Coap_Generic_FreeRTOS.launch
STM32_WPAN/App/: app_thread.c  app_thread.h
app/app_devices/ed_light/: CMakeLists.txt
app/app_devices/ed_light/inc/: ad_light.h  ad_light_control.h  ad_light_uri.h
app/app_devices/ed_light/src/: ad_light.c  ad_light_control.c  ad_light_uri.c
app/ot_app/inc/: ot_app.h  ot_app_coap.h  ot_app_coap_uri.h  ot_app_coap_uri_obs.h  ot_app_dataset_tlv.h  ot_app_deviceName.h  ot_app_dns.h  ot_app_drv.h  ot_app_pair.h  ot_app_srp_client.h
app/ot_app/port/: ot_app_port_nvs.c  ot_app_port_nvs.h  ot_app_port_openthread.h  ot_app_port_rtos.h
app/ot_app/src/: ot_app.c  ot_app_coap.c  ot_app_coap_uri.c  ot_app_coap_uri_obs.c  ot_app_deviceName.c  ot_app_dns.c  ot_app_drv.c  ot_app_pair.c  ot_app_srp_client.c
app/utils/: CMakeLists.txt  hro_utils.c  hro_utils.h
